split the dataset as train data and test data

--- a/iris_flower.ipynb
+++ b/iris_flower.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8bf1d6a6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c32e004f",
    "metadata": {},
    "outputs": [],
@@ -22,13 +22,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f2d46cfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fc306835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn"
    ]
   },
   {
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "26747fab",
    "metadata": {},
    "outputs": [
@@ -61,7 +71,7 @@
        " (0.9082572436765556, 0.40195790729656516, 0.9576909250290225)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d8c7a437",
    "metadata": {},
    "outputs": [],
@@ -82,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e262392b",
    "metadata": {},
    "outputs": [],
@@ -92,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ab447268",
    "metadata": {},
    "outputs": [],
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "16269df4",
    "metadata": {},
    "outputs": [
@@ -112,7 +122,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "084fcf36",
    "metadata": {},
    "outputs": [
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "51f6d5d1",
    "metadata": {},
    "outputs": [
@@ -259,7 +269,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0f341f08",
    "metadata": {},
    "outputs": [
@@ -285,7 +295,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "619a6aaa",
    "metadata": {},
    "outputs": [
@@ -307,7 +317,7 @@
        "<Axes: xlabel='sepal-length', ylabel='class'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -328,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "4027c98b",
    "metadata": {},
    "outputs": [
@@ -338,7 +348,7 @@
        "<Axes: xlabel='sepal-width', ylabel='class'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "6ebd8576",
    "metadata": {},
    "outputs": [
@@ -369,7 +379,7 @@
        "<Axes: xlabel='petal-length', ylabel='class'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -390,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "cab70e4e",
    "metadata": {},
    "outputs": [
@@ -400,7 +410,7 @@
        "<Axes: xlabel='petal-width', ylabel='class'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -421,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "c1363ed6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x26db3415400>"
+       "<seaborn.axisgrid.PairGrid at 0x2acc61bdd30>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -451,12 +461,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e00a738b",
+   "metadata": {},
+   "source": [
+    "split the dataset as train data and test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3745eace",
+   "id": "95b4a9c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = dataset.drop(['class'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "16be38d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = dataset['class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2bbb49e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X Axis : (150, 4) | Y Axis : (150,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"X Axis : {X.shape} | Y Axis : {Y.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "53038712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d98a0aec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=1)"
+   ]
   }
  ],
  "metadata": {
