predict and check the accuracy of the predictions

--- a/iris_flower.ipynb
+++ b/iris_flower.ipynb
@@ -1264,6 +1264,68 @@
    "source": [
     "svn.fit(X_test, Y_test)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36ed8ecb",
+   "metadata": {},
+   "source": [
+    "get predictions using test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "5de33a65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = svn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd6e6dd3",
+   "metadata": {},
+   "source": [
+    "import the accuracy_score lib to get a score of accuracy of the predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8c261a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e584daa0",
+   "metadata": {},
+   "source": [
+    "accuracy score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "84c5e833",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy_score(Y_test, predictions))"
+   ]
   }
  ],
  "metadata": {
